<?xml version="1.0"?>
<package format="2">

  <name>orca_stereo</name>
  <version>0.0.0</version>
  <description>Orca stereo cameras</description>

  <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
  <license>BSD</license>

  <author>Clyde McQueen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>

</package>